# E-commerce

./: .gitignore  ADMIN_FEATURE.md  ADMIN_QUICK_START.md  APPLICATION_STATUS.md  ASTRA_SETUP.md  AUTHENTICATION_SUMMARY.md  AUTH_FEATURE.md  CASSANDRA_MIGRATION.md  FEATURES.md  GITHUB_UPLOAD_SUCCESS.md  INSTALL_CASSANDRA_WINDOWS.md  LATEST_IMPROVEMENTS.md  MIGRATION.md  PROJECT_DOCUMENTATION.md  QUICK_START_CASSANDRA.md  README.md  SEARCH_FEATURE.md  SETUP.md  STYLING_IMPROVEMENTS.md  debug.html  docker-compose.yml  package-lock.json  package.json
client/: Dockerfile  index.html  package-lock.json  package.json
client/src/: App.tsx
django-backend/: .dockerignore  .env.astra.example  API.md  Dockerfile  FINAL_IMAGE_FIX_SUMMARY.md  IMAGE_UPDATE_SUMMARY.md  README.md  add_all_iphones.py  add_bbk_phones.py  add_remaining_images.py  add_transsion_phones.py  categorize_phones.py  check_images.py  create_categorized_catalog.py  create_comprehensive_catalog.py  current_images.txt  fix_all_images_comprehensive.py  fix_all_images_final.py  fix_all_other_brands.py  fix_images_dataapi.py  fix_images_properly.py  fix_images_with_working_urls.py  implement_comprehensive_categories.py  list_all_phones.py  list_all_products_images.py  populate_astra.py  populate_full_catalog.py  product_images_list.txt  requirements.txt  update_categories_direct.py  update_phone_images.py  update_single_image.py  use_reliable_images.py
django-backend/ecommerce/: settings.py  urls.py
rust-backend/: Cargo.toml
rust-backend/src/: database.rs  handlers.rs  main.rs  models.rs
(+29 files in other folders)
