[package]
name = "ecommerce-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework - Actix-web v4 for high-performance async HTTP server
actix-web = "4.4"
actix-cors = "0.6"

# Async Runtime - Tokio for async/await support
tokio = { version = "1.0", features = ["full"] }

# Futures - For stream processing
futures = "0.3"

# Serialization - Serde for JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# MongoDB Driver - Official MongoDB Rust driver
mongodb = "2.8"

# HTTP Client - Reqwest for external image URL validation
reqwest = { version = "0.11", features = ["json"] }

# UUID Generation - For unique product IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Environment Variables - For MongoDB connection string
dotenv = "0.15"

# Logging - For debugging and monitoring
env_logger = "0.10"
log = "0.4"

# Error Handling - Anyhow for simplified error handling
anyhow = "1.0"

# Date/Time - Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }